[gd_scene load_steps=7 format=3 uid="uid://bixuvnjitsxng"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_ldy1k"]
[ext_resource type="Texture2D" uid="uid://chs8fcnod0t2o" path="res://Sprites/Player land Enemy2.png" id="2_cp1nr"]
[ext_resource type="Theme" uid="uid://blfavfe01gtm7" path="res://Themes/BasicButton.tres" id="2_dvf40"]
[ext_resource type="FontFile" uid="uid://duijj1wrubrvq" path="res://Pixel.ttf" id="4_2er76"]
[ext_resource type="Script" path="res://main_menu_audio.gd" id="5_tgfel"]

[sub_resource type="CanvasTexture" id="CanvasTexture_68qcr"]
diffuse_texture = ExtResource("2_cp1nr")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ldy1k")

[node name="Land" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -305.0
offset_right = 239.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CanvasTexture_68qcr")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.0
offset_top = 4.0
offset_right = 199.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("4_2er76")
theme_override_font_sizes/normal_font_size = 32
text = "CAT GOT YOUR COLOUR!"

[node name="Secret" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -61.0
offset_right = 77.5
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(155, 38)
layout_mode = 2
theme = ExtResource("2_dvf40")
theme_override_fonts/font = ExtResource("4_2er76")
text = "PLAY"

[node name="Credits" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme = ExtResource("2_dvf40")
theme_override_fonts/font = ExtResource("4_2er76")
text = "CREDITS"

[node name="Quit" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme = ExtResource("2_dvf40")
theme_override_fonts/font = ExtResource("4_2er76")
text = "QUIT"

[node name="MainMenuAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_tgfel")

[connection signal="pressed" from="Secret" to="." method="_on_secret_pressed"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
